# mapreduce-rust

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  clean.sh  config.toml  todo.md
core/: Cargo.toml
core/src/: ds.rs  lib.rs
mr/: Cargo.toml
mr/src/: coordinator.rs  ds.rs  lib.rs  main.rs  plugins.rs  rpc.rs  wc.rs  worker.rs
mr/src/ds/: intermediate.rs  mod.rs  task.rs  taskman.rs
mr/tests/: ds_tests.rs
mrapp/: Cargo.toml  template.txt
mrapp/src/: lib.rs  skeleton.rs  wc.rs
src/: ds.rs  lib.rs  rpc.rs
