[package]
name = "mr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.34", features = ["full"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.4.18", features = ["derive"] }
tracing = { version = "0.1" }
serde = "1.0.209"
