[package]
name = "mr"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Min <jonathanheromin@gmail.com>"]


[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.34", features = ["full"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.4.18", features = ["derive"] }
tracing = { version = "0.1" }
serde = "1.0.209"
serde_json = "1.0.127"
toml = "0.8.19"
regex = "1.10.6"
tempfile = "3.12.0"
hashbrown = "0.14.5"
